--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 
 .idea
 
+# Tokens for write/read permissions
+tokens.txt
+
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
 # since they will be recreated, and may cause churn.  Uncomment if using
